alignment fix for getstarted text on mobile screens

--- a/components/agility-pageModules/landingPage/getStartedModule/getStarted.module.scss
+++ b/components/agility-pageModules/landingPage/getStartedModule/getStarted.module.scss
@@ -52,7 +52,6 @@ $minWidth: calc(100vw - 62rem);
                         @extend .bold67;
                     }
                     h5 {
-                        text-align: right;
                         @extend .regular25;
                     }
                 }
